# changed

./: .gitignore  Cargo.toml  PKGBUILD  README.md  example-log.md  sonar-project.properties
.github/workflows/: build.yml
changed/: FETCH_HEAD  config  packed-refs
changed/objects/pack/: pack-70c5245c1d0743647bead01e372fcc75a3d4106e.idx  pack-70c5245c1d0743647bead01e372fcc75a3d4106e.pack  pack-70c5245c1d0743647bead01e372fcc75a3d4106e.rev
docs/: categories.md  changed.1.md  changed.1.scd  default-tracked-paths.md  getting-started.md  help-text.md  operations.md  packaging-workflow.md  planned-improvements.md  scope-model.md
docs/plans/: 2026-04-05-changed-setup.md
packaging/systemd/system/: changedd.service
packaging/systemd/user/: changedd.service
src/: app.rs  category.rs  cli.rs  config.rs  journal.rs  lib.rs  main.rs  scope.rs  setup.rs
src/app/: daemon.rs  paths.rs  render.rs  service.rs  setup.rs  status.rs  watch.rs
