[package]
name = "changed"
version = "0.2.0"
edition = "2024"
description = "Lightweight system tuning changelog for Arch Linux"
license = "MIT"

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
directories = "6.0"
notify = "8.2"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = { version = "2.7", features = ["text", "inline"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
toml = "0.9"
walkdir = "2.5"
